# DEVINE

./: .dockerignore  .eslintrc.json  .gitignore  .gitmodules  .pylintrc  AUTHORS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  devine.launch  docker-compose.gpu.yml  docker-compose.yml  install_pretrained.sh  load-documentation.sh
dashboard/: README.md  (+5 more)
guesswhat/devine_guesswhat/: CMakeLists.txt  package.xml
guesswhat/devine_guesswhat/data/: tokens.json
guesswhat/devine_guesswhat/example/: example.py
guesswhat/devine_guesswhat/src/: guesswhat_node.py  modelwrappers.py
image_processing/devine_image_processing/: package.xml
image_processing/devine_image_processing/src/: blur_detection_node.py  body_tracking.py  features_extraction.py  ros_image_processor.py  segmentation.py  zone_detection.py
kinect/devine_kinect/: CMakeLists.txt  package.xml
kinect/devine_kinect/src/: pos_lib.py
robot_control/irl_control/: README.md  irl_point.rviz  package.xml  setup.py
robot_control/irl_control/src/irl_control/: commandPublisher.py  command_publisher.py  example.py  example_emotion.py  example_standalone.py  gripper.py  ik.py  irl_constant.py  irl_control.launch  marker.py  movement.py  node_control.py  node_error.py  node_marker.py  node_object_tf.py  trajectoryClient.py  trajectory_client.py
src/common/: CMakeLists.txt  package.xml  setup.py
src/common/src/devine_common/: actionlib_goal_status.py  image_utils.py  math_utils.py  pos_lib.py  ros_utils.py
src/common/src/devine_common/example/: test_find_scene.py
src/config/: CMakeLists.txt  package.xml  setup.py
src/config/scripts/: devinetopics.py
src/config/src/devine_config/: __init__.py
src/config/src/devine_config/static/: parameters.json
src/dashboard/: CMakeLists.txt  package-lock.json  package.json  package.xml  webpack.config.js
src/dashboard/src/devine_dashboard/: build_watch.py  serve.py
src/dashboard/src/devine_dashboard/css/: styles.css
src/dashboard/src/devine_dashboard/html/: index.html
src/dashboard/src/devine_dashboard/html/dashboard/: console.html  dashboard.html  publisher.html
src/dashboard/src/devine_dashboard/html/dashboard/subscribers/: dialog.html  image_dispatcher.html  kinect.html
src/dashboard/src/devine_dashboard/html/demo/: demo.html
src/dashboard/src/devine_dashboard/html/demo/macros/: camera_feed.html
src/dashboard/src/devine_dashboard/html/macros/: camera_feed.html  console.html
src/dashboard/src/devine_dashboard/html/scoreboard/: scoreboard.html
src/dashboard/src/devine_dashboard/js/: app.js  throttle.js
src/dashboard/src/devine_dashboard/js/dashboard/: canvas_drawer.js  console.js  dashboard.js  publisher.js  ros.js
src/dashboard/src/devine_dashboard/js/dashboard/subscribers/: canvas_drawer.js  dialog.js  gamestate.js  guesswhat.js  image_dispatcher.js  kinect.js  queries_answers.js  snips.js
src/dashboard/src/devine_dashboard/js/demo/: demo.js  dialog.js
src/dashboard/src/devine_dashboard/js/scoreboard/: scoreboard.js
src/dashboard/src/devine_dashboard/js/vars/: .gitignore  colors.js
src/devine/: CMakeLists.txt  package.xml
src/devine/launch/: devine.launch
src/dialog/: CMakeLists.txt  package.xml  setup.py
src/dialog/msg/: TtsAnswer.msg  TtsQuery.msg
src/dialog/src/devine_dialog/: __init__.py  dialog_control.py  dialogs.json  joystick_answers.py  load_dialogs.py  snips.py
src/dialog/src/devine_dialog/static/: dialogs.json
src/game_system/: CMakeLists.txt  package.xml  setup.py
src/game_system/launch/: devine_common_find_scene_test.launch
src/game_system/src/: announce_object.py
src/game_system/src/devine_game_system/: announce_object.py  node_find_scene.py  start_new_game.py
src/guesswhat/devine_guesswhat/: CMakeLists.txt  package.xml
src/guesswhat/devine_guesswhat/example/: example.py
src/guesswhat/devine_guesswhat/src/: guesswhat_node.py  modelwrappers.py
src/head_coordinator/: CMakeLists.txt  package.xml  setup.py
src/head_coordinator/action/: LookAtHuman.action
src/head_coordinator/apriltags2_config/: tags.yaml
src/head_coordinator/include/devine_head_coordinator/: look.py
src/head_coordinator/src/devine_head_coordinator/: head_action_control.py  human_finder.py  neck_action_control.py  scene_finder.py
src/head_coordinator/src/devine_head_coordinator/example/: test_find_scene.py  test_human_finder.py
src/image_processing/: .gitignore  CMakeLists.txt  package.xml  requirements.txt
src/image_processing/msg/: SceneObject.msg  SegmentedImage.msg
src/image_processing/scripts/: parse_hls_dump.py
src/image_processing/src/devine_image_processing/: blur_detection.py  body_tracking.py  features_extraction.py  image_dispatcher.py  mask.py  ros_image_processor.py  segmentation.py  zone_detection.py
src/robot_control/: CMakeLists.txt  package.xml  setup.py
src/robot_control/example/: example_emotion.py  example_point.py
src/robot_control/launch/: devine_irl_control.launch  irl_point.rviz
src/robot_control/src/devine_irl_control/: admittance.py  controllers.py  gripper.py  ik.py  irl_constant.py  movement.py  objects.py
src/robot_control/src/devine_irl_control/node/: node_control.py  node_error.py  node_facial_expression.py  node_object.py
src/robot_control/src/irl_control/: controllers.py  gripper.py  irl_constant.py
src/scene_finder/: CMakeLists.txt  package.xml
src/scene_finder/src/devine_scene_finder/: scene_finder.py
tests/: CMakeLists.txt  package.xml  setup.py
tests/image_tests/: image_segmentation.py
tests/pipeline_testing/: play_mscoco.py
tests/src/devine_tests/: test_suite.py  testcase_template.py  utils.py
tests/src/devine_tests/pipeline_testing/: play_game.py  play_mscoco.py
tests/src/devine_tests/segmentation/: segmentation_helper.py
tests/src/devine_tests/segmentation/image_quality/: test1.json  test2.json  test_segmentation_quality.py
tests/src/devine_tests/segmentation/rate/: test.json  test_segmentation_rate.py
tests/src/devine_tests/segmentation_tests/: segmentation_helper.py  test.json  test_segmentation_rate.py  utils.py
tests/test/: default.test
(+159 files in other folders)
