<?xml version="1.0"?>
<package format="2">
  <name>devine_tests</name>
  <version>0.0.1</version>
  <description>The devine test package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <url>https://devineproject.github.io/</url>
  <license>BSD License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>devine_image_processing</depend>
  <test_depend>rosunit</test_depend>
  <export>
  </export>
</package>
