<?xml version="1.0"?>
<package format="2">
  <name>devine_image_processing</name>
  <version>0.0.1</version>
  <description>The devine_image_processing package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openni_camera</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>openni_camera</build_export_depend>
  <build_export_depend>openni_launch</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>openni_camera</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>devine_config</exec_depend>
</package>
