<package format="2">
    <name>irl_control</name>
    <version>0.0.1</version>
    <description>IRL-1 Control</description>
    <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
    <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>control_msgs</depend>
    <depend>trajectory_msgs</depend>
</package>
