<?xml version="1.0"?>
<package format="2">
  <name>devine_config</name>
  <version>0.0.1</version>
  <description>The devine_config package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
