<?xml version="1.0"?>
<package format="2">
  <name>devine_dashboard</name>
  <version>0.0.1</version>
  <description>The devine_dashboard package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>devine_config</exec_depend>
  <export>
  </export>
</package>
