<?xml version="1.0"?>
<package format="2">
  <name>devine_dashboard</name>
  <version>0.0.1</version>
  <description>The devine_dashboard package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbridge_server</depend>
  <depend>devine_config</depend>
  <export>
  </export>
</package>
