<?xml version="1.0"?>
<package format="2">
  <name>devine</name>
  <version>0.0.1</version>
  <description>The devine core base package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <url>https://devine.gel.usherbrooke.ca</url>
  <license>BSD License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>devine_common</exec_depend>
  <exec_depend>devine_config</exec_depend>
  <exec_depend>devine_dashboard</exec_depend>
  <exec_depend>devine_dialog</exec_depend>
  <exec_depend>devine_guesswhat</exec_depend>
  <exec_depend>devine_image_processing</exec_depend>
  <exec_depend>devine_irl_control</exec_depend>
  <export>
  </export>
</package>
