<?xml version="1.0"?>
<package format="2">
  <name>devine</name>
  <version>0.0.1</version>
  <description>The devine core base package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <url>https://devine.gel.usherbrooke.ca</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>devine_common</depend>
  <depend>devine_config</depend>
  <depend>devine_dashboard</depend>
  <depend>devine_dialog</depend>
  <depend>devine_guesswhat</depend>
  <depend>devine_image_processing</depend>
  <depend>devine_irl_control</depend>
  <depend>devine_head_coordinator</depend>
  <depend>openni_camera</depend>
  <depend>openni_launch</depend>
  <export>
  </export>
</package>
