<?xml version="1.0"?>
<package format="2">
  <name>devine_dialog</name>
  <version>0.0.1</version>
  <description>The DEVINE dialog package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>devine_config</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
