<?xml version="1.0"?>
<package format="2">
  <name>devine_game_system</name>
  <version>0.0.1</version>
  <description>The devine_game_system package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>devine_config</depend>
  <depend>devine_common</depend>
  <depend>devine_dialog</depend>
  <depend>devine_irl_control</depend>
  <export>
  </export>
</package>
