<?xml version="1.0"?>
<package format="2">
  <name>devine_image_processing</name>
  <version>0.0.1</version>
  <description>The devine_image_processing package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>devine_config</depend>
</package>
