<?xml version="1.0"?>
<package format="2">
  <name>devine_scene_finder</name>
  <version>0.0.1</version>
  <description>The devine_scene_finder package</description>
  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>openni_camera</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>apriltags2_ros</exec_depend>
  <exec_depend>devine_config</exec_depend>
  <exec_depend>devine_irl_control</exec_depend>
</package>
